# pensieve

./: .gitignore  .prettierrc  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.ai/mcp-configs/: README.md  copilot.json  cursor.json
.ai/skills/: pensieve-import.md  pensieve-memory-protocol.md  pensieve-setup.md
.github/workflows/: ci.yml  release.yml
docs/: intel-mac.md
skills/nightly-extraction/: SKILL.md
specs/2026-03-14-cross-agent-memory/: plan.cross-agent-memory.md  research.cross-agent-memory.md  spec.cross-agent-memory.md
specs/2026-03-15-auto-inject-memory/: plan.auto-inject-memory.md  research.auto-inject-memory.md  spec.auto-inject-memory.md
specs/2026-03-18-capture-checkpoint/: spec.capture-checkpoint.md
specs/2026-03-18-nightly-extraction/: spec.nightly-extraction.md
specs/2026-03-21-list-since-filter/: plan.list-since-filter.md  research.list-since-filter.md  spec.list-since-filter.md
specs/2026-03-24-memory-md-index-generation/: eval.memory-md-index-generation.md  plan.memory-md-index-generation.md  research.memory-md-index-generation.md  spec.memory-md-index-generation.md
specs/2026-03-26-align-inject-format/: eval.align-inject-format.md  spec.align-inject-format.md
src/: cli.rs  config.rs  date_utils.rs  embedder.rs  error.rs  index.rs  lib.rs  main.rs  mcp.rs  storage.rs  types.rs  validation.rs
src/ops/: archive.rs  configure.rs  context.rs  delete.rs  end_session.rs  inject.rs  list.rs  mod.rs  prime.rs  read.rs  recall.rs  reindex.rs  save.rs  schema.rs  setup.rs  update.rs
tests/: integration_tests.rs
(+4 files in other folders)
