[package]
name = "pensieve"
version = "0.2.11"
edition = "2024"
description = "A shared memory system for AI agents. One brain, every AI."
license = "MIT"
repository = "https://github.com/rigogsilva/pensieve"
keywords = ["mcp", "ai", "memory", "agents"]
categories = ["command-line-utilities"]

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
fastembed = "5.12"
rusqlite = { version = "0.38", features = ["bundled"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
sha2 = "0.10"
thiserror = "2"
dirs = "6"
schemars = "1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
